--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vite",
     "host": "vite --host",
-    "build": "run-p type-check build-only",
+    "build": "vite build",
+    "build:production": "vite build --mode production",
+    "build:staging": "vite build --mode staging",
     "preview": "vite preview --host",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
