--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,50 +1,38 @@
-pool:
-  name: digital-ocean
+name: CI/CD
 
-trigger:
-  branches:
-    include:
+on:
+  push:
+    branches:
       - '*'
 
-stages:
-  - stage: 'build-test-image'
-    displayName: 'Build Test Image'
-    condition: eq(variables['Build.SourceBranch'], 'refs/heads/develop')
-    variables:
-      - name: IMAGE_TAG
-        value: $(Build.SourceBranchName)
-      - name: DOCKERFILE_PATH
-        value: ./Dockerfile.staging
-    jobs:
-      - job: 'build'
-        steps:
-          - task: Bash@3
-            inputs:
-              targetType: 'inline'
-              script: |
-                docker build -t ${{ variables.IMAGE_TAG }} -f ${{ variables.DOCKERFILE_PATH }} .
-      - job: 'publish'
-        steps:
-          - task: Bash@3
-            inputs:
-              targetType: 'inline'
-              script: |
-                docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-                docker push ${{ variables.IMAGE_TAG }}
-                docker system prune -f
+jobs:
+  build_test_image:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-  - stage: 'deploy-test'
-    displayName: 'Deploy Test'
-    dependsOn: 'build-test-image'
-    condition: succeeded()
-    jobs:
-      - job: 'deploy'
-        steps:
-          - task: Bash@3
-            inputs:
-              targetType: 'inline'
-              script: |
-                ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker pull your-docker-image-name:${{ variables.IMAGE_TAG }}"
-                ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker stop your-container-name || true"
-                ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker rm your-container-name || true"
-                ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker run -d --name your-container-name -p 80:your_exposed_port your-docker-image-name:${{ variables.IMAGE_TAG }}"
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Build Test Image
+        run: |
+          docker build -t ${{ github.event.before }} -f ./Dockerfile.staging .
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push ${{ github.event.before }}
+          docker system prune -f
+
+  deploy_test:
+    runs-on: ubuntu-latest
+    needs: build_test_image
+    if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+    steps:
+      - name: Deploy Test
+        run: |
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker pull ${{ github.event.before }}"
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker stop ${{ github.event.before }} || true"
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker rm ${{ github.event.before }} || true"
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker run -d --name ${{ github.event.before }} -p 8080:8080 ${{ github.event.before }}"
