--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -31,13 +31,10 @@ jobs:
     needs: build_test_image
     if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up SSH
+      - name: Use SSH key
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          ssh-private-key-password: ${{ secrets.SSH_PRIVATE_KEY_PASSWORD }}
       - name: Deploy Test
         run: |
           ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker pull ${{ secrets.DOCKER_TEST_IMAGE }}"
