Fix CI/CD configs

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -3,12 +3,11 @@ name: CI/CD
 on:
   push:
     branches:
-      - '*'
+      - 'develop'
 
 jobs:
   build_test_image:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -31,10 +30,19 @@ jobs:
     needs: build_test_image
     if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
     steps:
+      - name: Debug SSH Key and Passphrase
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > /tmp/debug_key
+          echo "Passphrase: ${{ secrets.SSH_PRIVATE_KEY_PASSPHRASE }}" > /tmp/debug_passphrase
+          cat /tmp/debug_key
+          cat /tmp/debug_passphrase
+
       - name: Use SSH key
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key-passphrase: ${{ secrets.SSH_PRIVATE_KEY_PASSPHRASE }}
+
       - name: Deploy Test
         run: |
           ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker pull ${{ secrets.DOCKER_TEST_IMAGE }}"
