--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -49,6 +49,12 @@ jobs:
           ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker rm olymp-admin-test || true"
           ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker run --name olymp-admin-test -d -p 8080:80 ${{ secrets.DOCKER_TEST_IMAGE }}"
 
+      - name: Clean up previous Docker image and containers
+        run: |
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker ps -a -q --filter ancestor=${{ secrets.DOCKER_TEST_IMAGE }} | xargs docker stop"
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker ps -a -q --filter ancestor=${{ secrets.DOCKER_TEST_IMAGE }} | xargs docker rm"
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker rmi ${{ secrets.DOCKER_TEST_IMAGE }}"
+
   build_prod_image:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
