--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -48,9 +48,8 @@ jobs:
           ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker stop olymp-admin-test || true"
           ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker rm olymp-admin-test || true"
           ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker run --name olymp-admin-test -d -p 8080:80 ${{ secrets.DOCKER_TEST_IMAGE }}"
-
-      - name: Prune Docker images
-        run: docker image prune -af
+          sleep 5  # Add a delay of 5 seconds
+          ssh -v ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} "docker image prune -af"
 
   build_prod_image:
     runs-on: ubuntu-latest
